# option-research

./: .gitignore  AGENTS.md  DASHBOARD_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Method.md  README.md  pyproject.toml  requirements.txt  run_intraday_cron.sh
config/: config.py
dashboard/: .gitignore  ARCHITECTURE.md  CHART_UPDATE.md  FEATURES.md  FIX_SUMMARY.md  GET_STARTED.md  QUICKSTART.md  README.md  START_HERE.md  TROUBLESHOOTING.md  UPDATED_CHARTS.txt  package-lock.json  package.json  test-connection.js  verify-setup.sh
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: signals-chart.tsx  signals-table.tsx  stats-cards.tsx
dashboard/hooks/: useIntradaySignals.ts
dashboard/lib/: supabase.ts
dashboard/types/: supabase.ts
data/: sample_inputs.csv
db/: 000_init.sql  README.md
examples/: fetch_earnings.py  fetch_options.py  full_pipeline_example.py  get_recent_earnings.py  score_todays_earnings.py
jobs/: README.md  daily_pipeline.py  intraday.py  post_close.py  pre_market.py
lib/: DATA_PROVIDERS.md  EVENTS_DOCUMENTATION.md  __init__.py  events.py  finnhub_client.py  polygon_client.py  scoring.py  signals.py  supa.py  supabase_client.py
option_research/: __init__.py  __main__.py  finnhub_client.py  pipeline.py  polygon_client.py
result/: 10_15_25.csv
supabase/: config.toml
supabase/migrations/: 20251015000000_init.sql  20251015020000_intraday.sql  20251015030000_grant_anon_access.sql  (+1 more)
tests/: conftest.py  test_data_providers.py  test_events.py  test_finnhub_setup.py  test_intraday.py  test_pipeline.py  test_polygon_setup.py  test_pre_market.py  test_scoring.py  test_setup.py  test_signals.py
