[project]
name = "option-research"
version = "0.1.0"
description = "Directional score model for choosing call vs put trades"
authors = [{name = "Option Research"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "finnhub-python>=2.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["option_research"]
